--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2  ## Maven Dependency 저장 위치
-          key: ${{ runner.os }}-m2-${{ hashFiles("**/pom.xml") }}  ## 캐시 식별 키 생성 (pom.xml 파일이 변하면 새로운 캐시 식별 키 생성. 예: Linux-m2-d4280aef)
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}  ## 캐시 식별 키 생성 (pom.xml 파일이 변하면 새로운 캐시 식별 키 생성. 예: Linux-m2-d4280aef)
           restore-keys: ${{ runner.os }}-m2  ## 캐시 대체 키 생성 (식별 키를 이용해 매칭 실패 시 Linux-m2로 시작하는 최근 캐시를 찾아서 복원)
       ## (4) Maven version 확인
       - name: Check Maven version
